# AbleOscMcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
remote_script/AbleOscRack/: __init__.py  manager.py
remote_script/AbleOscRack/ableoscrack/: __init__.py  browser.py  constants.py  osc_server.py  rack.py
scripts/: populate_operator_descriptions.py
src/ableosc/: __init__.py  client.py  copilot.py  device_database.py  info_view.py  resources.py  server.py  subscriptions.py  theory.py
src/ableosc/tools/: __init__.py  browser_tools.py  clip.py  device.py  device_db.py  listen.py  music.py  rack.py  scene.py  song.py  track.py  view.py
tests/: conftest.py
tests/integration/: README.md  conftest.py  test_clip_integration.py  test_live_connection.py  test_resources_integration.py  test_scene_integration.py  test_song_integration.py  test_track_integration.py  test_view_integration.py
tests/unit/: test_browser_tools.py  test_client.py  test_clip_tools.py  test_device_db_tools.py  test_device_tools.py  test_info_view.py  test_listen_tools.py  test_music_tools.py  test_rack_tools.py  test_resources.py  test_scene_and_view_tools.py  test_song_tools.py  test_theory.py  test_track_tools.py
