[project]
name = "ableosc-mcp"
version = "0.1.0"
description = "MCP server for Ableton Live via AbletonOSC"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-osc>=1.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
ableosc-mcp = "ableosc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ableosc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Ableton Live instance with AbletonOSC installed",
    "unit: fast tests that use mock clients, no external dependencies",
]

[tool.coverage.run]
source = ["src/ableosc"]
omit = ["tests/*"]
