[project]
name = "ableosc-mcp"
version = "0.1.0"
description = "MCP server for Ableton Live via AbletonOSC"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Matthew" },
]
keywords = ["ableton", "live", "osc", "mcp", "midi", "music", "daw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-osc>=1.9.3",
]

[project.urls]
Homepage = "https://github.com/mawaha/AbleOscMcp"
Repository = "https://github.com/mawaha/AbleOscMcp"
Issues = "https://github.com/mawaha/AbleOscMcp/issues"

[project.optional-dependencies]
macos = [
    "pyobjc-framework-applicationservices>=12.1",
    "pyobjc-framework-vision>=12.1",
    "pyobjc-framework-quartz>=12.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
ableosc-mcp = "ableosc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ableosc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Ableton Live instance with AbletonOSC installed",
    "unit: fast tests that use mock clients, no external dependencies",
]

[tool.coverage.run]
source = ["src/ableosc"]
omit = ["tests/*"]
